#115 add line break to fix overflow

--- a/src/components/TweetResults/components/TweetAttributes/TweetAttributes.module.scss
+++ b/src/components/TweetResults/components/TweetAttributes/TweetAttributes.module.scss
@@ -34,6 +34,7 @@
       font-weight: 400;
       font-size: 1.6rem;
       line-height: 150%;
+      line-break: anywhere;
 
       color: #fbfbfb;
 
